# snapgroup

./: .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  RESTORE-ARCHITECTURE.md  SESSION-NOTES.md  snapgroup.install
src/: boot.rs  btrfs.rs  cli.rs  commands.rs  group.rs  main.rs  rollback.rs  snapper.rs  sudo.rs
systemd/: snapg-cleanup.service
