[package]
name = "snapgroup"
version = "0.1.0"
edition = "2024"
description = "Wrapper Snapper com snapshots agrupados por subvolume"
license = "MIT"
repository = "https://github.com/huandney/snapgroup"

[[bin]]
name = "snapg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
console = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
